--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,11 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.2",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4",
     "vite": "^3.1.8"
   }
 }
