--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.1.3",
     "bootstrap": "^4.6.2",
     "jquery": "^3.6.1",
+    "pinia": "^2.0.26",
     "popper.js": "^1.16.1",
     "vee-validate": "^4.7.3",
     "vue": "^3.2.41",
