--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.2.0",
+    "@meforma/vue-toaster": "^1.3.0",
     "@tailwindcss/line-clamp": "^0.4.2",
     "axios": "^1.1.3",
     "bootstrap": "^4.6.2",
